--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Carrera</title>
+    <title>Corre y Gana</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/33.loader.js";
+      var loaderUrl = buildUrl + "/34.loader.js";
       var config = {
-        dataUrl: buildUrl + "/33.data",
-        frameworkUrl: buildUrl + "/33.framework.js",
-        codeUrl: buildUrl + "/33.wasm",
+        dataUrl: buildUrl + "/34.data",
+        frameworkUrl: buildUrl + "/34.framework.js",
+        codeUrl: buildUrl + "/34.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Hyperse",
         productName: "Carrera",
